--- a/src/Feed.css
+++ b/src/Feed.css
@@ -1,6 +1,6 @@
 .feed-layout {
   width: 80%;
-  margin: 0 auto;
+  margin: 0 auto 40px auto;
   border: 1px solid #e2e2e2;
   border-radius: 3px 3px 0 0;
 }
@@ -11,7 +11,4 @@
   color: #615c5c;
   text-shadow: 0.5px 0px 1px #615c5c;
   padding: 30px 20px;
-}
-iframe {
-  display: block;
 }
